turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:9: error: missing arguments for method setCouleur in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	setCouleur() = Color.red
        ^Source:11: error: missing arguments for method setCouleur in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	setCouleur() = Color.yellow
        ^Source:13: error: missing arguments for method setCouleur in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
	setCouleur() =  Color .magenta
        ^