turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
def quartdeCercle() { 
for (k<-1 to 90) {
	avance(100)
	recule(100)
	droite(1)}}
	quartdeCercle()
	setCouleur() = Color.red
	quartdeCercle()
	setCouleur() = Color.yellow
	quartdeCercle()
	setCouleur() =  Color .magenta
	quartdeCercle()	
}
